k3s/proxy/ingress-router.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: neobradley
  namespace: web
spec:
  entryPoints:                      # [1]
    - foo
  routes:                           # [2]
    - kind: Rule
      match: Host(`test.domain.com`)  # [3]
      priority: 10                    # [4]
      middlewares:                    # [5]
        - name: middleware1             # [6]
          namespace: default            # [7]
      services:                       # [8]
        - kind: Service
          name: foo
          namespace: default
          passHostHeader: true
          port: 80
          responseForwarding:
            flushInterval: 1ms
          scheme: https
          sticky:
            cookie:
              httpOnly: true
              name: cookie
              secure: true
          strategy: RoundRobin
          weight: 10
  tls:                              # [9]
    secretName: supersecret         # [10]
    options:                        # [11]
      name: opt                     # [12]
      namespace: default            # [13]
    certResolver: foo               # [14]
    domains:                        # [15]
      - main: foo.com                 # [16]
        sans:                         # [17]
          - a.foo.com
          - b.foo.com
